<resources>
    <string name="app_name">HelpCenter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main2">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_medication_name_text">Medication name</string>
    <string name="new_medication_time_text">Medication schedule</string>
    <string name="new_medication_dosage_units_text">Dosage units</string>
    <string name="new_medication_till_date_text">Medication till</string>
    <string name="new_medication_amount_left_text">Current stock</string>
    <string name="dialog_dosage_text">Dosage</string>
    <string name="title_activity_call_notification">CallNotification</string>
</resources>
